# dreamkart

./: .gitignore  docker-compose.yaml  main.py  pyproject.toml
app/: __init__.py  config.py  extensions.py
app/models/: __init__.py  base.py  cart.py  marketing.py  order.py  payment.py  product.py  session.py  store_settings.py  tenant.py  user.py
app/models/old/: Cart.py  FeaturedProduct.py  Order.py  OrderDetails.py  Product.py  ProductCategory.py  ProductImage.py  Users.py
app/routes/: __init__.py
app/routes/frontend/dreamkart/: static_routes.py
app/routes/frontend/store/: static_routes.py
app/schemas/: pydantic_model.py
app/services/: middleware.py  storage.py
app/services/tenant/: __init__.py  tenant_service.py
app/templates/dreamkart/: base.html  unclaimed_subdomain_landing.html
app/templates/dreamkart/components/: footer.html  navbar.html
app/templates/dreamkart/home/: index.html
app/utils/: tenant_utils.py
tests/database/: connection_test.py
