[project]
name = "dreamkart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.5.2",
    "flask>=3.1.0",
    "minio>=7.2.15",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
    "razorpay>=1.4.2",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
]
