[project]
name = "dreamkart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.5.2",
    "flask>=3.1.0",
    "minio>=7.2.15",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "razorpay>=1.4.2",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-utils>=0.41.2",
    "python-magic>=0.4.27",
    "flask-cors>=5.0.1",
    "flask-migrate>=4.1.0",
]
